# cmake-template

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeLists.txt
dependencies/: CMakeLists.txt
pm/: package-lock.cmake
